<resources>
    <string name="app_name">Udit\'s App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="protfolio_title">Udit\'s Nanodegree App</string>
    <string name="spotify_steamer">Spotify Steamer</string>
    <string name="scores_app">Scores app</string>
    <string name="library_app">Library app</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone_my_own_app">Capstone my own app</string>
    <string name="portfolio_toast_message_TEMPLATE">This button will launch my %1s !</string>

</resources>
