<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/portfolio_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PortfolioActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/protfolio_title"
        android:textColor="@color/portfolio_tilte_color"
        android:textSize="@dimen/portfolio_tile_text_size" />

    <LinearLayout
        android:id="@+id/portfolio_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/portfolio_button_container_margin"
        android:layout_marginRight="@dimen/portfolio_button_container_margin"
        android:paddingTop="@dimen/portfolio_button_container_padding"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_spotify_steamer"
            style="@style/PorfolioButton"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="onClickSpotifySteamer"
            android:text="@string/spotify_steamer" />

        <Button
            android:id="@+id/button_scores_app"
            style="@style/PorfolioButton"
            android:onClick="onClickScoresApp"
            android:text="@string/scores_app" />

        <Button
            android:id="@+id/button_library_app"
            style="@style/PorfolioButton"
            android:onClick="onClickLibraryApp"
            android:text="@string/library_app" />

        <Button
            android:id="@+id/button_build_it_bigger"
            style="@style/PorfolioButton"
            android:onClick="onClickBuildItBigger"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/button_xyz_reader"
            style="@style/PorfolioButton"
            android:onClick="onClickXYZReader"
            android:text="@string/xyz_reader" />

        <Button
            android:id="@+id/button_capstone_my_own_app"
            style="@style/PorfolioButton"
            android:background="@color/captone_background"
            android:onClick="onClickCapstoneMyOwnApp"
            android:text="@string/capstone_my_own_app"
            android:textColor="@android:color/white" />
    </LinearLayout>
</FrameLayout>
